# pyjcr

./: README.md  chatbot.py  ml.py  setup.cfg
src/jcr/: jutil.py  urldownloader.py
