[metadata]
name = pyjcr-lib
version = 0.0.1
author = J. Chaim Reus
author_email = info@jonathanreus.com
description = Various python odds and ends that I've found useful.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jreus/pyjcr
project_urls =
    Bug Tracker = https://github.com/jreus/pyjcr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
